Update the book

--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -1742,17 +1742,20 @@ word frequency.
 
 \includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-19-1.pdf}
 
-\chapter{Applications}\label{applications}
-
-Some \emph{significant} applications are demonstrated in this chapter.
-
-\section{Example one}\label{example-one}
-
-\section{Example two}\label{example-two}
-
-\chapter{Final Words}\label{final-words}
-
-We have finished a nice book.
+\begin{longtable}[]{@{}cc@{}}
+\toprule
+Grammar Component & Specification\tabularnewline
+\midrule
+\endhead
+data & mydata\tabularnewline
+aesthetic mapping & x: OrthoN\_T, y: Freq\_T\tabularnewline
+geometric object & points\tabularnewline
+scale & x: linear, y: linear\tabularnewline
+statistical transform & none\tabularnewline
+coordinate system & rectangular\tabularnewline
+facetting & none\tabularnewline
+\bottomrule
+\end{longtable}
 
 \bibliography{book.bib,packages.bib}
 
