--- a/03-method.Rmd
+++ b/03-method.Rmd
@@ -86,16 +86,19 @@ Required aesthetics:
   * `bins`: the number of bins/bars shown in the plot.
   * `binwidth`: the with of the bins shown on the plot.
   
-Let us say that we want to make sure our linguistic stimuli is balanced across specific word properties such as word frequency. We want to know if there are too many high frequency words as comparede to low ones, or vice versa. So here we are going to plot a histogram displaying the distribution of word frequency across items
+Let us say that we want to make sure our linguistic stimuli is balanced across specific word properties such as word frequency. We want to know if there are too many high frequency words as comparede to low ones, or vice versa. So here we are going to plot a histogram displaying the distribution of word frequency across items. However, what if we are also interested if this varies across sentence constraints? Then we can use the `fill` argument in the `aes()` call to do this.
 
 ```{r results = 'hide', message = FALSE, warning= FALSE}
 
-mydata %>% ggplot(aes(x = Freq_T)) + # this defines the x and y axes of the plot
-  geom_histogram() + # this adds geometric objects
-  theme_classic() + # this sets the theme for the plot
-  theme_update(plot.title = element_text(hjust = 0.5)) + # this line centers the title
-  xlab("Word Frequency of Target Word") + # this line sets the label for x-axis
-  ylab("Count") + # this line sets the label for y-axis
-  ggtitle("Word Frequency Distribution for Target Words") # this sets the title for the plot
+mydata %>% ggplot(aes(x = OrthoN_T, fill = constrained_to)) + 
+  geom_histogram(bins = 20, alpha = .7) + 
+  theme_classic() + 
+  theme_update(plot.title = element_text(hjust = 0.5)) +  
+  scale_fill_discrete(name  ="Sentence Constraint", labels=c("Alternative", "Neutral", "Target")) +
+  xlab("Word Frequency of Target Word") + 
+  ylab("Count") + 
+  ggtitle("Word Frequency Distribution for Target Words") 
 
 ```
+
+
